--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "outDir": "dist",
+    "moduleResolution": "NodeNext",
 
     "resolveJsonModule": true
   },
